kube/namespace.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: web

---

apiVersion: v1
kind: Namespace
metadata:
  name: data

...
