kube/deployment-zadanie-2.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-zadanie-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netology-2
  template:
    metadata:
      labels:
        app: netology-2
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80

...
