kube/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app

spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0

  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app

    spec:
      containers:
      - name: nginx
        image: nginx:1.20
        ports:
        - containerPort: 80

      - name: multitool
        image: wbitt/network-multitool:latest
...
