kube/pod-netology-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netology-web
  labels: 
    app: netology-web
spec:
  containers:
  - name: echoserver
    image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
    ports:
    - containerPort: 8080
