kube/pod-zadanie1.yaml
---

apiVersion: v1
kind: Pod
metadata:
  name: pod-zadanie-1
spec:
  containers:
    - name: multitool
      image: wbitt/network-multitool:latest

...
