kube/deployment-zadanie-1.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-zadanie-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netology
  template:
    metadata:
      labels:
        app: netology
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
        - name: multitool
          image: wbitt/network-multitool:latest
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: service-zadanie-1
spec:
  selector:
    app: netology
  ports:
    - name: nginx-port
      port: 80
      targetPort: 80
    - name: multitool-port
      port: 8080
      targetPort: 8080

...
