kube/service-netology-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc
spec:
  selector:
    app: netology-web
  ports:
    - name: echoserver
      protocol: TCP
      port: 8088
      targetPort: 8080
